# The-Matrix

./: .gitignore  README.md  pyproject.toml
src/matrix_run/: keychain.py  prompts.py  runner.py
src/matrix_run/llm/: gemini_stream.py  sse.py  types.py
src/matrix_run/ui/: chat.py  crt.py  splash.py  terminal.py
src/runcli/: cli.py
