[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-matrix"
version = "0.1.0"
description = "Matrix-themed Gemini CLI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "keyring>=24.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/runcli", "src/matrix_run"]

[project.scripts]
run = "runcli.cli:main"
